# costa_intro

./: .gitignore  README.md  costa.ipynb  downloader.py  pyproject.toml  solve.py  transcribe.py
episodes/: episodes.json
results/: results.json  results_fixed.json
